test/unique/neg/swap-rhs-not-unique.check
swap-rhs-not-unique.scala:10: error: method does not return capability of value x
  def m(x: C @transient) {
      ^
one error found
